--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.4.1",
-    "degit": "^2.8.4"
+    "degit": "^2.8.4",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^22.13.0"
+    "@types/node": "^22.13.0",
+    "typescript": "^5.2.2"
   },
   "type": "module"
 }
