--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "pnpm tsc",
-    "prepare": "pnpm run build"
+    "prepare": "pnpm run build",
+    "publish": "pnpm version patch && pnpm publish --access public"
   },
   "keywords": [
     "nextjs",
