--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "scripts": {
     "build": "pnpm tsc",
-    "prepare": "pnpm run build",
-    "publish": "pnpm version patch && pnpm publish --access public"
+    "prepare": "pnpm run build"
   },
   "keywords": [
     "nextjs",
